--- a/templates/memcached_freebsd_rcconf.erb
+++ b/templates/memcached_freebsd_rcconf.erb
@@ -1,4 +1,10 @@
+# # Added by Puppet
 <%-
+enabled='YES'
+if @package_ensure == 'absent'
+  enabled='NO'
+end
+
 result = []
 if @verbosity
   result << '-' + @verbosity.to_s
@@ -28,5 +34,5 @@ end
 if @unix_socket
   result << '-s ' + @unix_socket
 end -%>
-memcached_enable="YES"
+memcached_enable="<%= enabled %>"
 memcached_flags="-d -u nobody -P /var/run/memcached/memcached.pid <%= result.join(' ') %>"
