Fix logfile order in FreeBSD erb; fix pidfile variable in FreeBSD erb; move pidfile to OS-specific section

--- a/templates/memcached.conf.erb
+++ b/templates/memcached.conf.erb
@@ -70,3 +70,7 @@ logfile <%= @logfile -%>
 # Disable automatic removal of items from the cache when out of memory
 -M
 <% end -%>
+
+<% if @extended_opts -%>
+-o <%= @extended_opts.join(',') -%>
+<% end -%>
