--- a/templates/memcached_freebsd_rcconf.erb
+++ b/templates/memcached_freebsd_rcconf.erb
@@ -1,8 +1,9 @@
-# # Added by Puppet
+# Added by Puppet
 <%-
-enabled='YES'
 if @package_ensure == 'absent'
   enabled='NO'
+else
+  enabled='YES'
 end
 
 result = []
@@ -25,14 +26,14 @@ if @item_size
   result << '-I ' + @item_size.to_s
 end
 result << '-t ' + @processorcount.to_s
-if @max_connections 
+if @max_connections
   result << '-c ' + @max_connections.to_s
-end
-if @logfile
-  result << '>> ' + @logfile + ' 2>&1'
 end
 if @unix_socket
   result << '-s ' + @unix_socket
+end
+if @logfile
+  result << '>> ' + @logfile + ' 2>&1'
 end -%>
 memcached_enable="<%= enabled %>"
-memcached_flags="-d -u nobody -P /var/run/memcached/memcached.pid <%= result.join(' ') %>"
+memcached_flags="-d -u <%= @user %> -P <%= @pidfile %> <%= result.join(' ') %>"
